# ChangeLog for dev-python/django-filter
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/django-filter: Add github to remote-id in metadata.xml

*django-filter-0.10.0 (15 May 2015)

  15 May 2015; Justin Lecher <jlec@gentoo.org> +django-filter-0.10.0.ebuild,
  metadata.xml:
  dev-python/django-filter: Version Bump

*django-filter-0.9.2 (07 Apr 2015)

  07 Apr 2015; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.9.2.ebuild,
  -django-filter-0.9.1.ebuild:
  Version bump of django-filter

*django-filter-0.9.1 (30 Dec 2014)

  30 Dec 2014; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.9.1.ebuild,
  +metadata.xml:
  New ebuild for django-filter