@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-filter-0.11.0 (16 Aug 2015)
+
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> +django-filter-0.11.0.ebuild:
+  dev-python/django-filter: Version bump to 0.11.0
+
   06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   dev-python/django-filter: Add github to remote-id in metadata.xml
 
